vlib/v/checker/tests/ierror_in_return_tuple.out
vlib/v/checker/tests/ierror_in_return_tuple.vv:1:29: error: type `IError` cannot be used in multi-return, return an option instead
    1 | fn return_ierror_in_tuple() (bool, IError) {
      |                             ~~~~~~~~~~~~~~
    2 |     return false, error('')
    3 | }
vlib/v/checker/tests/ierror_in_return_tuple.vv:5:29: error: option cannot be used in multi-return, return an option instead
    3 | }
    4 | 
    5 | fn return_option_in_tuple() (bool, ?bool) {
      |                             ~~~~~~~~~~~~~
    6 |     return false, error('')
    7 | }
